--- a/package.json
+++ b/package.json
@@ -8,10 +8,6 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^16.11.19",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
     "@ya.praktikum/react-developer-burger-ui-components": "^1.13.1",
     "react": "^17.0.2",
     "react-css-modules": "^4.7.11",
@@ -24,7 +20,7 @@
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
-    "typescript": "^4.5.4",
+    "typescript": "^4.6.4",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
@@ -54,6 +50,11 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^27.5.1",
+    "@types/node": "^16.11.35",
+    "@types/react": "^17.0.45",
+    "@types/react-dom": "^17.0.17",
+    "@types/react-router-dom": "^5.3.3",
     "gh-pages": "^3.2.3"
   }
 }
